Fix Spotbugs