@@ -829,7 +829,7 @@ public class JBallerinaDebugServer implements IDebugProtocolServer {
     private static boolean isBalStrand(ThreadReference threadReference) {
         // Todo - Refactor to use thread proxy implementation
         try {
-            return isBalStackFrame(threadReference.frames().get(0));
+            return isBalStackFrame(threadReference.frames().getFirst());
         } catch (Exception e) {
             return false;
         }
@@ -960,13 +960,14 @@ public class JBallerinaDebugServer implements IDebugProtocolServer {
 
     private Variable[] computeGlobalScopeVariables(VariablesArguments requestArgs) {
         int stackFrameReference = requestArgs.getVariablesReference();
-        String classQName = PackageUtils.getQualifiedClassName(suspendedContext, INIT_CLASS_NAME);
-        List<ReferenceType> cls = suspendedContext.getAttachedVm().classesByName(classQName);
+        String classQName = PackageUtils.getQualifiedClassName(
+                Objects.requireNonNull(suspendedContext), INIT_CLASS_NAME);
+        List<ReferenceType> cls = Objects.requireNonNull(suspendedContext).getAttachedVm().classesByName(classQName);
         if (cls.size() != 1) {
             return new Variable[0];
         }
         List<CompletableFuture<Variable>> scheduledVariables = new ArrayList<>();
-        ReferenceType initClassReference = cls.get(0);
+        ReferenceType initClassReference = cls.getFirst();
         for (Field field : initClassReference.allFields()) {
             String fieldName = Utils.decodeIdentifier(field.name());
             if (!field.isPublic() || !field.isStatic() || fieldName.startsWith(GENERATED_VAR_PREFIX)) {
@@ -991,7 +992,7 @@ public class JBallerinaDebugServer implements IDebugProtocolServer {
     }
 
     private Variable[] computeLocalScopeVariables(VariablesArguments args) throws Exception {
-        StackFrameProxyImpl stackFrame = suspendedContext.getFrame();
+        StackFrameProxyImpl stackFrame = Objects.requireNonNull(suspendedContext).getFrame();
         List<CompletableFuture<Variable>> scheduledVariables = new ArrayList<>();
         List<CompletableFuture<Variable[]>> scheduledLambdaMapVariables = new ArrayList<>();
         List<LocalVariableProxyImpl> localVariableProxies = stackFrame.visibleVariables();
@@ -1073,16 +1074,19 @@ public class JBallerinaDebugServer implements IDebugProtocolServer {
     private CompletableFuture<Variable> computeVariableAsync(String name, Value value, Integer stackFrameRef) {
         return CompletableFuture.supplyAsync(() -> {
             BVariable variable = VariableFactory.getVariable(suspendedContext, name, value);
-            if (variable == null) {
-                return null;
-            }
-            if (variable instanceof BSimpleVariable) {
-                variable.getDapVariable().setVariablesReference(0);
-            } else if (variable instanceof BCompoundVariable) {
-                int variableReference = nextVarReference.getAndIncrement();
-                variable.getDapVariable().setVariablesReference(variableReference);
-                loadedCompoundVariables.put(variableReference, (BCompoundVariable) variable);
-                updateVariableToStackFrameMap(stackFrameRef, variableReference);
+            switch (variable) {
+                case null -> {
+                    return null;
+                }
+                case BSimpleVariable bSimpleVariable -> bSimpleVariable.getDapVariable().setVariablesReference(0);
+                case BCompoundVariable bCompoundVariable -> {
+                    int variableReference = nextVarReference.getAndIncrement();
+                    variable.getDapVariable().setVariablesReference(variableReference);
+                    loadedCompoundVariables.put(variableReference, bCompoundVariable);
+                    updateVariableToStackFrameMap(stackFrameRef, variableReference);
+                }
+                default -> {
+                }
             }
             return variable.getDapVariable();
         }, variableExecutor);
@@ -1128,15 +1132,19 @@ public class JBallerinaDebugServer implements IDebugProtocolServer {
             String name = entry.getKey();
             Value value = entry.getValue();
             BVariable variable = VariableFactory.getVariable(suspendedContext, name, value);
-            if (variable == null) {
-                return null;
-            } else if (variable instanceof BSimpleVariable) {
-                variable.getDapVariable().setVariablesReference(0);
-            } else if (variable instanceof BCompoundVariable) {
-                int variableReference = nextVarReference.getAndIncrement();
-                variable.getDapVariable().setVariablesReference(variableReference);
-                loadedCompoundVariables.put(variableReference, (BCompoundVariable) variable);
-                updateVariableToStackFrameMap(args.getVariablesReference(), variableReference);
+            switch (variable) {
+                case null -> {
+                    return null;
+                }
+                case BSimpleVariable bSimpleVariable -> bSimpleVariable.getDapVariable().setVariablesReference(0);
+                case BCompoundVariable bCompoundVariable -> {
+                    int variableReference = nextVarReference.getAndIncrement();
+                    variable.getDapVariable().setVariablesReference(variableReference);
+                    loadedCompoundVariables.put(variableReference, bCompoundVariable);
+                    updateVariableToStackFrameMap(args.getVariablesReference(), variableReference);
+                }
+                default -> {
+                }
             }
             return variable.getDapVariable();
         }).filter(Objects::nonNull).toArray(Variable[]::new);
@@ -1149,15 +1157,19 @@ public class JBallerinaDebugServer implements IDebugProtocolServer {
         return varMap.stream().map(value -> {
             String name = String.format("[%d]", index.getAndIncrement());
             BVariable variable = VariableFactory.getVariable(suspendedContext, name, value);
-            if (variable == null) {
-                return null;
-            } else if (variable instanceof BSimpleVariable) {
-                variable.getDapVariable().setVariablesReference(0);
-            } else if (variable instanceof BCompoundVariable) {
-                int variableReference = nextVarReference.getAndIncrement();
-                variable.getDapVariable().setVariablesReference(variableReference);
-                loadedCompoundVariables.put(variableReference, (BCompoundVariable) variable);
-                updateVariableToStackFrameMap(args.getVariablesReference(), variableReference);
+            switch (variable) {
+                case null -> {
+                    return null;
+                }
+                case BSimpleVariable bSimpleVariable -> bSimpleVariable.getDapVariable().setVariablesReference(0);
+                case BCompoundVariable bCompoundVariable -> {
+                    int variableReference = nextVarReference.getAndIncrement();
+                    variable.getDapVariable().setVariablesReference(variableReference);
+                    loadedCompoundVariables.put(variableReference, bCompoundVariable);
+                    updateVariableToStackFrameMap(args.getVariablesReference(), variableReference);
+                }
+                default -> {
+                }
             }
             return variable.getDapVariable();
         }).filter(Objects::nonNull).toArray(Variable[]::new);
@@ -1171,15 +1183,19 @@ public class JBallerinaDebugServer implements IDebugProtocolServer {
      */
     private EvaluateResponse constructEvaluateResponse(EvaluateArguments args, BVariable evaluationResult) {
         EvaluateResponse response = new EvaluateResponse();
-        if (evaluationResult == null) {
-            return response;
-        } else if (evaluationResult instanceof BSimpleVariable) {
-            evaluationResult.getDapVariable().setVariablesReference(0);
-        } else if (evaluationResult instanceof BCompoundVariable) {
-            int variableReference = nextVarReference.getAndIncrement();
-            evaluationResult.getDapVariable().setVariablesReference(variableReference);
-            loadedCompoundVariables.put(variableReference, (BCompoundVariable) evaluationResult);
-            updateVariableToStackFrameMap(args.getFrameId(), variableReference);
+        switch (evaluationResult) {
+            case null -> {
+                return response;
+            }
+            case BSimpleVariable bSimpleVariable -> bSimpleVariable.getDapVariable().setVariablesReference(0);
+            case BCompoundVariable bCompoundVariable -> {
+                int variableReference = nextVarReference.getAndIncrement();
+                evaluationResult.getDapVariable().setVariablesReference(variableReference);
+                loadedCompoundVariables.put(variableReference, bCompoundVariable);
+                updateVariableToStackFrameMap(args.getFrameId(), variableReference);
+            }
+            default -> {
+            }
         }
 
         Variable dapVariable = evaluationResult.getDapVariable();
